@@ -158,8 +158,20 @@
          min-length="15"
          max-length="255">
       </restrictedString>
-
    </restrictedStrings>
+
+<!-- ===============================================================
+     RESTRICTED LONGS
+     =============================================================== -->
+   <restricted-longs>
+       <restrictedLong
+         classname="RestrictedLong"
+         package="org.jcoderz.commons.test"
+         min-value="15"
+         max-value="255">
+         <constants name="SPECIAL" comment="Verry Stecial Value" value="15"/>
+      </restrictedLong>
+   </restricted-longs>
 <!-- ===============================================================
      VALUE OBJECTS
      =============================================================== -->
