@@ -16,6 +16,10 @@ Fawkez 1.2 'Charlie X'
     parameters: allowUseOfBaseLogger and customLoggerClass
   * The LogFormater now also respects java text formating in
     trace messages (was broken).
+  * Generated types now throw more detailed exceptions for
+    length and value range validations.
+  * Generated StrongTypes (immutable ones) do implement a
+    common interface (StrongType).
 
 Fawkez 1.1 'The Man Trap' (March 31, 2007)
 https://www.jcoderz.org/fawkez/browser/tags/FAWKEZ_1_1_0
